[project]
name = "ida-codemode-api"
authors = [
  {name = "Willi Ballenthin", email = "willi.ballenthin@gmail.com"},
]
description = "Portable 28-function analysis API for IDA Pro, backed by ida-domain"
version = "0.1.0"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "ida-domain",
]

[project.optional-dependencies]
test = [
    "idapro",
    "pytest",
]

[project.urls]
source = "https://github.com/williballenthin/idawilli/tree/master/ida-codemode-api"
repository = "https://github.com/williballenthin/idawilli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ida_codemode_api*"]

[tool.setuptools.package-data]
ida_codemode_api = ["prompts/*.md"]
