[project]
name = "ida-codemode-api"
authors = [
  {name = "Willi Ballenthin", email = "wballenthin@hex-rays.com"},
]
description = "Portable analysis API for IDA Pro"
version = "0.1.0"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "ida-domain",
]

[project.optional-dependencies]
test = [
    "ida-domain",
    "pytest",
]

[project.urls]
source = "https://github.com/williballenthin/idawilli/tree/master/ida-codemode-api"
repository = "https://github.com/williballenthin/idawilli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ida_codemode_api*"]

[tool.setuptools.package-data]
ida_codemode_api = ["prompts/*.md"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
