[project]
name = "ida-monty-sandbox"
authors = [
  {name = "Willi Ballenthin", email = "willi.ballenthin@gmail.com"},
]
description = "A secure Monty sandbox exposing IDA Pro analysis routines for safe execution of AI-generated scripts"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic-monty",
    "ida-domain",
]

[project.optional-dependencies]
test = [
    "idapro",
    "pytest",
]

[project.urls]
source = "https://github.com/williballenthin/idawilli/tree/master/ida-sandbox"
repository = "https://github.com/williballenthin/idawilli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ida_sandbox*"]

[tool.setuptools.package-data]
ida_sandbox = ["prompts/*.md"]
