[project]
name = "williballenthin-colorize-calls-ida-plugin"
authors = [
  {name = "Willi Ballenthin", email = "willi.ballenthin@gmail.com"},
]
description = "IDA Pro plugin to colorize call instructions and add a prefix"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = []

[project.entry-points.'idapro.plugins']
idapython = "colorize_calls"

[tool.setuptools]
py-modules = ["colorize_calls"]
