[project]
name = "hint-calls-ida-plugin"
authors = [
  {name = "Willi Ballenthin", email = "willi.ballenthin@gmail.com"},
]
description = "IDA Pro plugin to display popup function hints for the referenced calls and strings"
version = "0.1.1"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = []

[project.entry-points.'idapro.plugins']
idapython = "hint_calls"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
