[project]
name = "idapro-plugin-manager"
version = "0.2.0"
description = "Plugin Manager for IDA Pro"
authors = [
    {name = "Willi Ballenthin", email = "willi.ballenthin@gmail.com"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    # importlib.metadata available in Python 3.10
    # so we use this backport until we drop support for Python 3.9.
    "importlib-metadata>=8.5.0",
    "importlib-resources>=6.5.2",

    # for ippm cli tool
    "packaging>=24.0",
    "platformdirs>=4.0.0",
    "requests>=2.30.0",
    "requests-cache>=1.2.0",
    "rich>=13.0.0",
]
keywords = ["reverse engineering", "ida pro", "idapro", "plugin manager", "plugins"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["idapro_plugin_manager*"]
namespaces = false

[project.optional-dependencies]
dev = [
    "types-requests>=2.32.0.20250602",
]
build = [
    # Dev and build dependencies are not relaxed because
    # we want all developer environments to be consistent.
    # These dependencies are not used in production environments
    # and should not conflict with other libraries/tooling.
    "setuptools==78.1.1",
    "build==1.2.2"
]

[project.scripts]
ippm = "idapro_plugin_manager.__main__:main"
